<resources>
    <string name="app_name">AndroidInterviewTrainingApp</string>
    <string name="countOfQuestions">%s/%s</string>
    <string name="questions">Вопросы</string>
    <string name="countOfThemes">%s/6</string>
    <string name="themes">Темы</string>
    <string name="interview">Собеседование</string>
    <string name="marathon">Марафон</string>
    <string name="mistakes">Ошибки</string>
    <string name="fav">Избранное</string>
    <string name="question_number">1</string>
    <string name="question_string">Здесь будет текста вопроса</string>
    <string name="theme_string">Здесь будет выбранная тема</string>
    <string name="theory_text">Здесь будет теория</string>
    <string name="button_start">Начать тестирование</string>
    <string name="button_return">Вернуться на главный экран</string>
    <string name="button_next_question">Следующий вопрос</string>
    <string name="choosing_theme">Какая-то тема для изучения</string>
    <string name="choosing_answer">Какой-то вариант ответа</string>
    <string name="marathon_text">Марафон по всем %s вопросам</string>
    <string name="nothing_text">Здесь пока что ничего нет...</string>
    <string name="result_text">Ваш результат</string>
    <string name="count_text"> %s ошибок, %s вопроса(ов)</string>
    <string name="mistakes_text">МОИ ОШИБКИ</string>
    <string name="again_text">ЕЩЕ РАЗ</string>
    <string name="button_base">База</string>
    <string name="button_threads">RxJava / Coroutines</string>
    <string name="button_android">Android</string>
    <string name="button_sql">SQL</string>
    <string name="button_kotlin">Kotlin</string>
    <string name="button_java">Java</string>
    <string name="add_to_fav">Добавить в избранное</string>
    <string name="delete_from_fav">Удалить из избранного</string>
    <string name="explanation_text">Здесь будет объяснение при неправильном выборе</string>
    <string name="finish_test">Завершить</string>
    <string name="next_question_text">Следующий вопрос</string>
    <string name="show_explanation">Показать объяснение</string>
</resources>