<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonReturn"
        android:layout_marginBottom="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/resultImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/result_text"
                android:textSize="35sp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp" />

            <TextView
                android:id="@+id/tvCounts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/count_text"
                android:textSize="15sp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonMistakes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mistakes_text"
                android:background="@drawable/main_buttons_design"
                android:layout_gravity="center"
                android:layout_margin="20dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonAgain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/again_text"
                android:background="@drawable/main_buttons_design"
                android:layout_gravity="center"
                />

        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonReturn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_return"
        android:background="@drawable/main_buttons_design"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="20dp"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>
