<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/imageView"

            android:layout_width="287dp"
            android:layout_height="294dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="50dp"
            android:src="@drawable/main_screen_image"
            app:layout_constraintBottom_toTopOf="@+id/cardViews"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/cardViews"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <androidx.cardview.widget.CardView
                android:id="@+id/questionsCV"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/my_light_primary">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/countOfQuestions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/countOfQuestions" />

                    <ProgressBar
                        android:id="@+id/progressBar1"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/textQuestions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/questions" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/themesCV"
                android:layout_width="409dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:cardBackgroundColor="@color/my_light_primary">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/countOfThemes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/countOfThemes" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/textThemes"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/themes" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViews">

            <com.omega_r.libs.OmegaCenterIconButton
                android:id="@+id/interviewButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/interview_button"
                android:drawableStart="@drawable/resized_interview"
                android:drawablePadding="20dp"
                android:text="@string/interview" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center">

                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <com.omega_r.libs.OmegaCenterIconButton
                        android:id="@+id/themeButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/main_buttons_design"
                        android:drawableStart="@drawable/resized_book"
                        android:drawablePadding="10dp"
                        android:text="@string/themes" />

                    <com.omega_r.libs.OmegaCenterIconButton
                        android:id="@+id/marathonButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/main_buttons_design"
                        android:drawableStart="@drawable/resized_marathon"
                        android:drawablePadding="12dp"
                        android:text="@string/marathon" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <com.omega_r.libs.OmegaCenterIconButton
                        android:id="@+id/mistakeButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/main_buttons_design"
                        android:drawableStart="@drawable/resized_mistake"
                        android:drawablePadding="10dp"
                        android:text="@string/mistakes" />

                    <com.omega_r.libs.OmegaCenterIconButton
                        android:id="@+id/favButton"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_weight="1"
                        android:background="@drawable/main_buttons_design"
                        android:drawableStart="@drawable/resized_fav"
                        android:drawablePadding="12dp"
                        android:text="@string/fav" />
                </TableRow>

            </TableLayout>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>